fix contrast ratio in navigation

--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -2,19 +2,19 @@
   padding : .5em 1em;
 
   .home & {
-    background: $green;
+    background: $green-dark;
   }
 
   .writing & {
-    background: $blue;
+    background: $blue-dark;
   }
 
   .coding & {
-    background: $red;
+    background: $red-dark;
   }
 
   .learning & {
-    background: $red;
+    background: $red-dark;
   }
 
   &__list {
